[package]
name = "tigershark3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sqlx = { version = "0.6.1", default-features=false , features = [ "runtime-tokio-rustls", "macros", "sqlite"] }
tokio = {version="1.20.1" , features=["full"]}

