[package]
name = "tigershark3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sqlx = { version = "0.6.1", default-features=false , features = [ "runtime-tokio-rustls", "macros", "sqlite"] }
tokio = {version="1.20.1" , features=["full"]}
clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.142", features = ["derive"]}
serde_json = "1.0.83"
chrono = "0.4.23"
dotenv = "0.15.0"
thiserror = "1.0.38"
